--- a/TonicEngine/TonicEngine.vcxproj.filters
+++ b/TonicEngine/TonicEngine.vcxproj.filters
@@ -427,6 +427,9 @@
     <ClInclude Include="Source Code\PanelCameraPreview.h">
       <Filter>Sources\Modules\GUI\Panels</Filter>
     </ClInclude>
+    <ClInclude Include="ComponentBillboard.h">
+      <Filter>Sources\GameObject\Components</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source Code\ComponentMesh.cpp">
@@ -671,6 +674,9 @@
     </ClCompile>
     <ClCompile Include="Source Code\PanelCameraPreview.cpp">
       <Filter>Sources\Modules\GUI\Panels</Filter>
+    </ClCompile>
+    <ClCompile Include="ComponentBillboard.cpp">
+      <Filter>Sources\GameObject\Components</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
