--- a/TonicEngine/TonicEngine.vcxproj.filters
+++ b/TonicEngine/TonicEngine.vcxproj.filters
@@ -67,6 +67,9 @@
     <Filter Include="Sources\Modules\Resources">
       <UniqueIdentifier>{f6c7500b-446c-406a-99b3-90fdcbd7baed}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Sources\Particles">
+      <UniqueIdentifier>{ed3d2ac0-998f-4276-a121-aeaad3fc99de}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
@@ -427,7 +430,16 @@
     <ClInclude Include="Source Code\PanelCameraPreview.h">
       <Filter>Sources\Modules\GUI\Panels</Filter>
     </ClInclude>
-    <ClInclude Include="ComponentBillboard.h">
+    <ClInclude Include="Source Code\ComponentBillboard.h">
+      <Filter>Sources\GameObject\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Code\ModuleParticleManager.h">
+      <Filter>Sources\Particles</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Code\Particle.h">
+      <Filter>Sources\Particles</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Code\ComponentEmitter.h">
       <Filter>Sources\GameObject\Components</Filter>
     </ClInclude>
   </ItemGroup>
@@ -675,7 +687,16 @@
     <ClCompile Include="Source Code\PanelCameraPreview.cpp">
       <Filter>Sources\Modules\GUI\Panels</Filter>
     </ClCompile>
-    <ClCompile Include="ComponentBillboard.cpp">
+    <ClCompile Include="Source Code\ComponentBillboard.cpp">
+      <Filter>Sources\GameObject\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="Source Code\ModuleParticleManager.cpp">
+      <Filter>Sources\Particles</Filter>
+    </ClCompile>
+    <ClCompile Include="Source Code\Particle.cpp">
+      <Filter>Sources\Particles</Filter>
+    </ClCompile>
+    <ClCompile Include="Source Code\ComponentEmitter.cpp">
       <Filter>Sources\GameObject\Components</Filter>
     </ClCompile>
   </ItemGroup>
