--- a/TonicEngine/TonicEngine.vcxproj
+++ b/TonicEngine/TonicEngine.vcxproj
@@ -13,7 +13,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{746CC4C3-787F-4B0E-AA66-E388FE3FF4F6}</ProjectGuid>
     <RootNamespace>SDLGame</RootNamespace>
-    <ProjectName>TonicEngine</ProjectName>
+    <ProjectName>BacchusEngine</ProjectName>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -42,11 +42,11 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <IncludePath>Source Code\Libraries\DevIL\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\W10\Documents\GitHub\TonicEngine\TonicEngine\Source Code\Libraries\Assimp\libx86;$(LibraryPath)</LibraryPath>
+    <LibraryPath>$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <IncludePath>Source Code\Libraries\DevIL\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\W10\Documents\GitHub\TonicEngine\TonicEngine\Source Code\Libraries\Assimp\libx86;$(LibraryPath)</LibraryPath>
+    <LibraryPath>$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
