--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 
-logo: [https://github.com/ForestGin/BacchusEngine/blob/gh-pages/WebFiles/Grapes%20Logo.png?raw=true]
+logo: [https://github.com/ForestGin/BacchusEngine/blob/gh-pages/WebFiles/Grapes%20Logo.png]
